<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tv.TvSeriesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tv_series"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/film_list_item"/>
    <ProgressBar
        android:id="@+id/pgs_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
</FrameLayout>